[tool.poetry]
name = "five-finder"
version = "0.1.0"
description = ""
authors = ["Danimal <chao-mu@hackpoetic.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
